# whisper-diarization

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml
docker/: Dockerfile
notebook/: SpeakerVerificationPipeline.ipynb
